@@ -2,5 +2,6 @@ v5.8
 -----
 + Added extended options for DLC checkboxes that are accessible by clicking "Options ▾".
 + Added price options to search results pages letting you easily filter results by price
++ Incorporated coupon codes into lowest price data
 + The "Remove" links on the wishlist no longer require the page to reload
 : Fixed a bug in market transaction total caused by change in API by Valve
